# rules_gasworks

./: .gitattributes  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel
e2e/smoke/: .bazelignore  .npmrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
e2e/smoke/pkgs/foo-lib/: BUILD.bazel  package.json  tsconfig.json
e2e/smoke/pkgs/tsconfig/: BUILD.bazel  package.json  tsconfig.base.json  tsconfig.node.json  tsconfig.web.json
gasworks/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
gasworks/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl
gasworks/tests/: versions_test.bzl
tsconfig/: defs.bzl  extensions.bzl
tsconfig/private/: tsconfig_repository.bzl
