"Bazel dependencies"

module(
    name = "rules_gasworks",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")

# aspect_bazel_lib
# ================================================================================
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")

aspect_bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
aspect_bazel_lib_toolchains.yq()
use_repo(aspect_bazel_lib_toolchains, "yq", "yq_toolchains")

# --------------------------------------------------------------------------------
# Dev dependencies
# --------------------------------------------------------------------------------

bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

tsconfig = use_extension("//tsconfig:extensions.bzl", "tsconfig")
use_repo(tsconfig, "tsconfig")
